# android_cctv

./: build.gradle
jni/: CMakeLists.txt  h264encoder.h
